:art: Set all "Specification" references to singular :sparkles: Return Specification on specification creation
